# terminus

./: .coverage  .gitignore  README.md  build.sh  narrative.md  pyproject.toml  requirements.txt
src/terminus_engine/: __init__.py  kernel.py  parser.py  persistence.py  server.py  session.py  shell.py  terminal.py  vfs.py  world.py
src/terminus_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_parser.py  test_shell_and_vfs.py
