[project]
name = "terminus-engine"
version = "0.1.0"
description = "TERMINUS ENGINE: SSH-native narrative cybersecurity simulation core."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncssh==2.21.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
